# salestrendsdashboard

./: .catalystrc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.appsail  PROJECT_IDENTITY.md  README.md  TASKS.md  app-config.json  app.py  appsail_main.py  build_snapshot.py  catalyst.custom-runtime.example.json  catalyst.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
functions/salestrends/: app_api.py  catalyst-config.json  dashboard.html  index.py  requirements.txt
public/: index.html
scripts/: build_appsail_image.ps1  build_appsail_image.py  package_appsail.py  verify.ps1  verify_deployments.ps1  verify_deployments.py
tests/: test_app_api.py  test_deployment.py
