[project]
name = "salestrendsdashboard"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi==0.111.0",
    "mangum==0.17.0",
    "uvicorn==0.29.0",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "openpyxl==3.1.2",
    "requests==2.31.0",
]

[tool.vercel.scripts]
build = "python build_snapshot.py"
